@@ -1,13 +1,12 @@
-﻿@echo off
-chcp 65001 >nul
+@echo off
 
-echo ðŸš€ Building Main Project...
+echo --- Building Main Project ---
 call mvn -q clean install -DskipTests
 if %ERRORLEVEL% NEQ 0 ( pause & exit /b )
 
-echo âš¡ Running Benchmark...
+echo --- Running Benchmark ---
 cd examples\Benchmark
 call mvn -q clean package
-java -jar target\benchmarks.jar
+java --sun-misc-unsafe-memory-access=allow -jar target\benchmarks.jar
 cd ..\..
 pause
